# es_core

./: Build.md  CMakeLists.txt  OSX_wrap.mm  README.md  art.md  bindings.gyp  common.gypi  game_main.cpp  game_main.h  head.gyp  main.cpp  nn.hpp  nn_str.cpp  render_main.cpp  render_main.h
bsp_src/: game.cpp  render.cpp
docs/: Design.md
head_src/: game.cpp  game.h  render.cpp
scene_load_src/: game.cpp  render.cpp
template_src/: game.cpp  render.cpp
